--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
                 </div>
                 <div class="a1">
                     <a class="tl" href="#">Imágenes</a>
-                </div>
-                
+                </div> 
             </div>
             <div class="a1">
                 <div class="a1">
@@ -29,5 +28,44 @@
             </div>
         </div>
     </header>
+    <div class="googlelogo">
+        <div class="contenedorlogo">
+            <img class="logo" src="images/googlelogo.png" alt="Google Logo">
+        </div>
+    </div>
+    <div class="busqueda">
+        <div class="cuadrobusqueda">
+            <div class="inp">
+               <input type="text" class="textobusqueda" name="" id="">
+            </div>
+            <div class="miclogo">   
+               <img src="images/miclogo.png" alt="logo microfono" class="imgmiclogo">
+            </div>
+        </div>
+    </div class="contbotones">
+        <div class="cont2">
+            <button class="boton btn1">Buscar con Google</button>
+            <button class="boton btn2">Voy a tener suerte</button>
+        </div>
+    <div class="idiomas">
+        <p>Ofrecido por Google en: <a href="#">catalá</a><a href="#">galego</a><a href="#">euskara</a></p>
+    </div>
+    <footer>
+        <div class="fot fot1">
+            <p class="country">España</p>
+        </div>
+        <div class="fot">
+            <div class="fotleft">
+                <a href="#">Publicidad</a>
+                <a href="#">Empresa</a>
+                <a href="#">Acerca de</a>
+            </div>
+            <div class="fotrigth">
+                <a href="#">Publicidad</a>
+                <a href="#">Condiciones</a>
+                <a href="#">Configuración</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
